# missive-pull

./: .gitignore  .pre-commit-config.yaml  README.md  example.py  missive.py  pyproject.toml  pyrightconfig.json  setup.cfg
