[metadata]
name = missive_pull
description = Pull and process messages for a given team inbox id
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = missive
install_requires =
    click
    msgpack
    python-dotenv
    requests
    rich
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.packages.find]
exclude =
    example.py

[options.entry_points]
console_scripts =
    missive-pull = missive:main

[options.extras_require]
typing =
    msgpack-types
    mypy
    types-attrs
    types-requests
    types-urllib3
